@@ -1,0 +1,60 @@
+<?php
+// This is the a special footer for popups
+//
+// To override this footer, create a file called popup.footer
+// in this directory.
+//
+//
+// Some tips:
+// * Some application variables:
+//      - Gallery Title: $gallery->app->galleryTitle
+// * Gallery developers would appreciate you promoting the Gallery code
+//   a little. Use the following code snippet to display the current
+//   Gallery version linked to the Gallery home page.
+//
+// $Id: general.footer.default 17810 2008-08-06 17:02:11Z JensT $
+
+includeTemplate('general.footer.tpl');
+global $validation_file;
+global $validation_args;
+?>
+</div>
+
+      <table width="100%" cellspacing="0" cellpadding="0" class="modfooter">
+        <tr>
+          <td style="vertical-align: top">
+            <!-- The Gallery code version number, linked to the Gallery home page -->
+            <span class="fineprint">
+	    <?php print poweredBy() ?>
+            </span>
+<?php
+global $GALLERY_EMBEDDED_INSIDE;
+       	if (! isset($GALLERY_EMBEDDED_INSIDE) && isset($validation_file)) {
+	       	print gallery_validation_link($validation_file, true, $validation_args);
+       	} ?>
+          </td>
+<?php if (!$gallery->session->offline && (!isset($gallery->app->rssEnabled) || $gallery->app->rssEnabled == "yes")) { ?>
+          <td style="text-align:right"><a href="<?php echo $gallery->app->photoAlbumURL . "/rss.php"; ?>" style="background-color:#f60; border:2px outset #ffc8a4; color:white; text-decoration:none; font:bold 10px sans-serif; padding:0px 3px 0px 5px; letter-spacing:1px;">RSS</a></td>
+<?php
+} // if rssEnabled
+if ($gallery->user->isAdmin() ) { ?>
+
+          <!-- donation block -->
+
+          <td width="300" align="right">
+            <span class="fineprint">
+              Are you happy with Gallery?<br>
+	      Make us happy too!  Donate!<br>
+            </span>
+          </td>
+          <td width="90" align="right">
+            <a href="<?php echo $gallery->url ?>/donate.php?donate_tag=v<?php echo $gallery->version ?>"><img align="right"
+              src="<?php echo getImagePath('donate.png') ?>" width="80" height="15" border="0" ALT="<?php echo gTranslate('core', "Donate to Gallery now!!") ?>"></a>
+          </td>
+          <?php } ?>
+        </tr>
+      </table>
+
+<?php
+includeHtmlWrap("wrapper.footer");
+?>
