@@ -1,3 +1,9 @@
+2008-08-11 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b1
+
+ * Fix: Ecard broken. Popup was empty, preview broken.
+
+ * New: Added special popup footer.
+
 2008-08-05 Chris Kelly <ckdake@ckdake.com> 1.5.8
 
  * Release: 1.5.8
